<resources>
    <string name="app_name">GroceryShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_hin_email">Email*</string>
    <string name="lbl_SendLink">Send Link</string>
    <string name="lbl_DontAccount">Don’t have any account yet?</string>
    <string name="lbl_SignUp">Sign up</string>
    <string name="lbl_hin_password">Password*</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_RememberPassword">Remember Password</string>
    <string name="lbl_ForgotPassword">Forgot Password?</string>
    <string name="lbl_hin_new_pass">New Password*</string>
    <string name="lbl_hin_rePass">Re-type Password*</string>
    <string name="lbl_Submit">Submit</string>
    <string name="lbl_hin_name">Full Name*</string>
    <string name="lbl_AlreadyAccount">Already have an account?</string>
    <string name="lbl_SinUpWith">Or/nSin up with</string>
    <string name="lbl_Registration">Registration</string>
    <string name="lbl_Categories">Categories</string>
    <string name="lbl_ViewAll">View all</string>
    <string name="lbl_Vegetable">Vegetable</string>
    <string name="lbl_hin_search">Search Product</string>
    <string name="lbl_EmailAlreadyExists">Email already exists</string>
    <string name="lbl_SignUpSuccess">Sign Up Success</string>
    <string name="lblMustNotBeLeftBlank">Must not be left blank</string>
    <string name="lblLoggedInSuccessfully">Logged in successfully</string>
    <string name="lvlEmailOrPasswordIsIncorrect">Email or password is incorrect</string>
    <string name="lblEmailIsIncorrect">Email is incorrect</string>
    <string name="lblPasswordsAreNotTheSame">Passwords are not the same</string>
    <string name="lblPasswordWasSuccessfullyChanged">Password was successfully changed</string>
    <string name="lblEmailFormatIsIncorrect"> Format is incorrect</string>
    <string name="lbl_LogOut">Log Out</string>
    <string name="lbl_ProductDescription">Product Description</string>
    <string name="lbl_Quantity">Quantity:</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_Subtotal">Subtotal</string>
    <string name="lbl_DeliveryFee">Delivery fee</string>
    <string name="lbl_Discount">Discount</string>
    <string name="lbl_Tax">Tax</string>
    <string name="lbl_Total">Total</string>
    <string name="lbl_confirm">CONFIRM</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_shipping">Shipping</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_hin_first_name">FirstName*</string>
    <string name="lbl_hin_last_name">Last Name*</string>
    <string name="lbl_hin_address">Address*</string>
    <string name="lbl_hin_city">City*</string>
    <string name="lbl_hin_state">State*</string>
    <string name="lblEmailIsRequired">*Email is required</string>
    <string name="lbl_hin_phone">Enter Phone Number</string>
    <string name="lbl_Flat_Shipping">Flat Shipping</string>
    <string name="lblLocalPickup">Local Pickup</string>
    <string name="lbl_free_hipping">Free Shipping</string>
    <string name="lbl_ShippingMethod">Shipping Method</string>
    <string name="lblTitleFlatShipping">Let’s you charge a fixed rate for shipping.</string>
    <string name="lblTitleLocalPickup">Allow customers to pickup orders themselves. By  default, when using local pickup store base taxes will apply regardless of customer address.</string>
    <string name="lblTitleFreeShipping">Free shipping is a special method which can be  triggered with coupons and minimum spends.</string>
    <string name="lbl_DelivereTo">Delivere To:</string>
    <string name="lbl_TotalAmount">Total Amount:</string>
    <string name="title_dialog_warning_internet">Looks like you don\'t have an Internet connection</string>
    <string name="tv_dialog_warning_internet">Please check your internet connection!</string>
    <string name="lblClose">Close</string>
</resources>