<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_50">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_20">

        <ImageView
            android:layout_width="@dimen/width_25"
            android:layout_height="@dimen/width_25"
            android:src="@drawable/ic_close" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center_horizontal"
            android:text="@string/title_dialog_warning_internet"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/ts_17" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/tv_dialog_warning_internet"
            android:textColor="@color/colorTvDialogNoInternet"
            android:textSize="@dimen/ts_15" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/bg_btn_white"
            android:text="@string/lblClose"
            android:textAllCaps="false"
            android:textColor="@color/colorBtnClose" />

    </LinearLayout>


</LinearLayout>